--- a/profile.html
+++ b/profile.html
@@ -811,83 +811,204 @@
           </div>
           <div class="col-xl-9">
             <div class="content-group">
-              <div class="card margin-bottom-15">
-                <div class="content-title">
-                  <div class="content-titlebox">
-                    <h1>Константин Александрович Константинопольский</h1>
+              <div class="row">
+                <div class="col-12">
+                  <div class="card margin-bottom-15">
+                    <div class="content-title">
+                      <div class="content-titlebox">
+                        <h1>Константин Александрович Константинопольский</h1>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="cards">
-                <div class="card card-third">
-                  <div class="card-wrap card-third-wrap">
+              <div class="row">
+                <div class="col-xl-4">
+                  <div class="card">
                     <div class="card__imgbox card__imgbox_xl" style="background-image: url(img/photo-01.png);"></div>
                   </div>
                 </div>
-                <div class="card cardTwoThirds">
-                  <div class="content-text">
-                    <h3>Главный инженер отделения трубопрокатного цеха <span class="small">(Подразделение отдела № 1023)</span></h3>
-                    <table class="profile-info">
+                <div class="col-xl-8">
+                  <div class="card">
+                    <div class="content-text">
+                      <h3>Главный инженер отделения трубопрокатного цеха<span class="small">(Подразделение отдела № 1023)</span></h3>
+                      <table class="profile-info margin-bottom-15">
+                        <tbody>
+                          <tr>
+                            <td class="text-right">
+                              <p><span class="light">Телефон:</span></p>
+                            </td>
+                            <td>
+                              <p>+7&nbsp;(83&nbsp;177)&nbsp;3-76-05&nbsp;доб.&nbsp;4526</p>
+                            </td>
+                            <td class="text-right">
+                              <p><a class="special-link" href="#">Редактировать профиль</a></p>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="text-right">
+                              <p><span class="light">Email:</span></p>
+                            </td>
+                            <td>
+                              <p>name.surname@omk.omk.ru</p>
+                            </td>
+                            <td class="text-right">
+                              <p></p>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td colspan="2">
+                              <hr>
+                            </td>
+                            <td></td>
+                          </tr>
+                          <tr>
+                            <td class="text-right">
+                              <p><span class="light">Skype:</span></p>
+                            </td>
+                            <td>
+                              <p>omk_engineer</p>
+                            </td>
+                            <td></td>
+                          </tr>
+                          <tr>
+                            <td class="text-right">
+                              <p><span class="light">Моб.:</span></p>
+                            </td>
+                            <td>
+                              <p>+7 (903) 924-25-27</p>
+                            </td>
+                            <td></td>
+                          </tr>
+                          <tr>
+                            <td class="text-right">
+                              <p><span class="light">VK:</span></p>
+                            </td>
+                            <td>
+                              <p>vk.com/omk_engineer</p>
+                            </td>
+                            <td></td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                    <div class="content-text margin-bottom-10">
+                      <p>Биография:</p>
+                    </div>
+                    <div class="content-text_special">
+                      <p>Константин Александрович Константинопольский — председатель совета директоров ОМК с июля 2017 года. Ранее А.М. Седых был председателем правления ОМК с января 2013 по июль 2017 гг. Руководящие должности в компании занимает с 1999 года. Сначала А.М. Седых возглавил Выксунский металлургический завод и вывел предприятие из кризиса. Затем был генеральным директором ОМК и председателем совета директором ВМЗ. В 2002-м выбран председателем совета директоров компании, в 2003-2006 годах был президентом ОМК.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xl-4">
+                  <button class="button-big-o button-big-o-danger">ГОРЯЧАЯ ЛИНИЯ ОМК</button>
+                </div>
+                <div class="col-xl-4">
+                  <button class="button-big-o button-big-o-special">ГОРЯЧАЯ ЛИНИЯ ОМК</button>
+                  <button class="button-big-o">ДАТЬ ОБЪЯВЛЕНИЕ</button>
+                </div>
+                <div class="col-xl-4">
+                  <button class="button-big-o">ДОБАВИТЬ БЛОГ</button>
+                  <button class="button-big-o">ОТСЛЕЖИВАЕМЫЕ БЛОГИ</button>
+                </div>
+              </div>
+              <div class="card margin-bottom-15">
+                <hr class="card-hr">
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <div class="card margin-bottom-15">
+                    <div class="content-titlebox">
+                      <h2>Сохраненные ссылки</h2>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card margin-bottom-10">
+                <div class="card-links">
+                  <div class="card-links-wrap">
+                    <div class="card-links__img">
+                      <div class="card-links__imgbox"><img src="icon-save.svg"></div>
+                    </div>
+                    <div class="card-links__items">
+                      <div class="card-links__item">
+                        <div class="card-links__head">
+                          <div class="card-links__title"><a class="card-links__lnk card-links__lnk_small color-thin" href="">Блог (25.10.19 от Русланова Михаила)</a></div>
+                          <div class="card-links__remove"><a class="card-links__lnk card-links__lnk_small link-special color-thin" href="">Удалить</a></div>
+                        </div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk text-ddd color-thin" href="">&quot;Почему так сильно перестроили расписание?&quot;</a></div>
+                      </div>
+                      <div class="card-links__item">
+                        <div class="card-links__head">
+                          <div class="card-links__title"><a class="card-links__lnk card-links__lnk_small color-thin" href="">Новость от 08.02.19 (Региональные новости)</a></div>
+                          <div class="card-links__remove"><a class="card-links__lnk card-links__lnk_small link-special color-thin" href="">Удалить</a></div>
+                        </div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk text-ddd color-thin" href="">Более 10,6 млн тонн рулонного проката произвел литейно-прокатный комплек...</a></div>
+                      </div>
+                      <div class="card-links__item">
+                        <div class="card-links__head">
+                          <div class="card-links__title"><a class="card-links__lnk card-links__lnk_small color-thin" href="">Новость от 08.02.19 (Новости ОМК)</a></div>
+                          <div class="card-links__remove"><a class="card-links__lnk card-links__lnk_small link-special color-thin" href="">Удалить</a></div>
+                        </div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk text-ddd color-thin" href="">Применяемые технологические методы изготовления и ремонта</a></div>
+                      </div>
+                      <div class="card-links__item">
+                        <div class="card-links__head">
+                          <div class="card-links__title"><a class="card-links__lnk card-links__lnk_small color-thin" href="">Статья (Библиотека &gt; Архив &gt; Основные положения)</a></div>
+                          <div class="card-links__remove"><a class="card-links__lnk card-links__lnk_small link-special color-thin" href="">Удалить</a></div>
+                        </div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk text-ddd color-thin" href="">Типы производства по ГОСТ 14.004-83</a></div>
+                      </div>
+                      <div class="card-links__item">
+                        <div class="card-links__head">
+                          <div class="card-links__title"><a class="card-links__lnk card-links__lnk_small color-thin" href="">Документ (Компания &gt; Конституция)</a></div>
+                          <div class="card-links__remove"><a class="card-links__lnk card-links__lnk_small link-special color-thin" href="">Удалить</a></div>
+                        </div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk text-ddd color-thin" href="">Конституция ОМК</a></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <div class="card margin-bottom-15">
+                    <div class="content-titlebox">
+                      <h2>Свои иконки меню "Системы"</h2>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xl-3">
+                  <div class="card-icons">
+                    <table>
                       <tbody>
                         <tr>
-                          <td class="text-right">
-                            <p><span class="light">Телефон:</span></p>
-                          </td>
-                          <td>
-                            <p>+7&nbsp;(83&nbsp;177)&nbsp;3-76-05&nbsp;доб.&nbsp;4526</p>
-                          </td>
-                          <td class="text-right">
-                            <p><a class="special-link" href="#">Редактировать профиль</a></p>
-                          </td>
+                          <td><i class="icon-burg"></i></td>
+                          <td><i class="icon-more"></i></td>
+                          <td><i class="icon-close"></i></td>
+                          <td><i class="icon-search"></i></td>
                         </tr>
                         <tr>
-                          <td class="text-right">
-                            <p><span class="light">Email:</span></p>
-                          </td>
-                          <td>
-                            <p>name.surname@omk.omk.ru</p>
-                          </td>
-                          <td class="text-right">
-                            <p></p>
-                          </td>
+                          <td><i class="icon-shop_cart"></i></td>
+                          <td><i class="icon-filters"></i></td>
+                          <td><i class="icon-like"></i></td>
+                          <td><i class="icon-fire"></i></td>
                         </tr>
                         <tr>
-                          <td colspan="2">
-                            <hr>
-                          </td>
-                          <td></td>
-                        </tr>
-                        <tr>
-                          <td class="text-right">
-                            <p><span class="light">Skype:</span></p>
-                          </td>
-                          <td>
-                            <p>omk_engineer</p>
-                          </td>
-                          <td></td>
-                        </tr>
-                        <tr>
-                          <td class="text-right">
-                            <p><span class="light">Моб.:</span></p>
-                          </td>
-                          <td>
-                            <p>+7 (903) 924-25-27</p>
-                          </td>
-                          <td></td>
-                        </tr>
-                        <tr>
-                          <td class="text-right">
-                            <p><span class="light">VK:</span></p>
-                          </td>
-                          <td>
-                            <p>vk.com/omk_engineer</p>
-                          </td>
-                          <td></td>
+                          <td><i class="icon-see"></i></td>
+                          <td><i class="icon-heart"></i></td>
+                          <td><i class="icon-mark"></i></td>
+                          <td><i class="icon-symbol"></i></td>
                         </tr>
                       </tbody>
                     </table>
                   </div>
                 </div>
+                <div class="col-xl-2"><i class="icon-heart"></i></div>
               </div>
             </div>
           </div>
