--- a/calendar2.html
+++ b/calendar2.html
@@ -1004,6 +1004,9 @@
                   </div>
                 </div>
               </article>
+              <div class="card">
+                <hr class="card-hr">
+              </div>
               <article class="article" id="event2-14-10-2018">
                 <div class="card">
                   <div class="content-title">
@@ -1023,6 +1026,9 @@
                   </div>
                 </div>
               </article>
+              <div class="card">
+                <hr class="card-hr">
+              </div>
               <article class="article" id="event3-14-10-2018">
                 <div class="card">
                   <div class="content-title">
