--- a/calendar2.html
+++ b/calendar2.html
@@ -822,7 +822,7 @@
               </div>
               <div class="card card-calendar">
                 <div class="content-title">
-                  <div class="content-subtitle">
+                  <div class="content-subtitle margin-top-10">
                     <h2>Ноябрь, <span>2018</span></h2>
                   </div>
                   <div class="content-subtitle content-subtitle_right">
