--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="slick/slick.css">
     <link href="css/style.css?0.2.4" rel="stylesheet">
-    <title>Доска почета | ОМК</title>
+    <title>404 | ОМК</title>
   </head>
   <body>
     <header class="header">
@@ -811,181 +811,10 @@
           </div>
           <div class="col-xl-9">
             <div class="content-group">
-              <div class="card margin-bottom-15">
-                <div class="content-title">
-                  <div class="content-titlebox">
-                    <h2>Доска почета ВМЗ</h2>
-                  </div>
-                </div>
-              </div>
-              <div class="card card-slider card-fifth-slider">
-                <div class="card-wrap card-slider-wrap card-fifth-slider-wrap">
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-01.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Мариановская Анастасия Константиновна</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-02.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Андреевский Андрей Александрович</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-03.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Мариановская Анастасия Константиновн</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-02.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Андреевский Андрей Александрович</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-01.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Мариановская Анастасия Константиновн</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-03.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Андреевский Андрей Александрович</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-02.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Мариановская Анастасия Константиновн</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-01.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Андреевский Андрей Александрович</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card margin-bottom-15">
-                <div class="content-title">
-                  <div class="content-titlebox">
-                    <h2>Доска почета Трубодеталь</h2>
-                  </div>
-                </div>
-              </div>
-              <div class="card card-slider card-fifth-slider">
-                <div class="card-wrap card-slider-wrap card-fifth-slider-wrap">
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-01.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Мариановская Анастасия Константиновна</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-02.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Андреевский Андрей Александрович</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-03.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Мариановская Анастасия Константиновн</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-02.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Андреевский Андрей Александрович</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-01.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Мариановская Анастасия Константиновн</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-03.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Андреевский Андрей Александрович</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-02.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Мариановская Анастасия Константиновн</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-01.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Андреевский Андрей Александрович</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card margin-bottom-15">
-                <div class="content-title">
-                  <div class="content-titlebox">
-                    <h2>Доска почета ЧМЗ</h2>
-                  </div>
-                </div>
-              </div>
-              <div class="card card-slider card-fifth-slider">
-                <div class="card-wrap card-slider-wrap card-fifth-slider-wrap">
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-01.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Мариановская Анастасия Константиновна</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-02.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Андреевский Андрей Александрович</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-03.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Мариановская Анастасия Константиновн</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-02.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Андреевский Андрей Александрович</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-01.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Мариановская Анастасия Константиновн</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-03.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Андреевский Андрей Александрович</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-02.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Мариановская Анастасия Константиновн</p>
-                    </div>
-                  </div>
-                  <div class="card-slider__item card-fifth-slider__item">
-                    <div class="card-fifth-slider__imgbox card__imgbox margin-bottom-10" style="background-image: url(img/person-photo-01.jpg);"></div>
-                    <div class="card-fifth-slider__title">
-                      <p>Андреевский Андрей Александрович</p>
-                    </div>
-                  </div>
+              <div class="card">
+                <div class="card__text_404">404</div>
+                <div class="content-text">
+                  <p>Страница не найдена. <br> Перейти на  <a href="/">Главную.</a></p>
                 </div>
               </div>
             </div>
