--- a/blocks.html
+++ b/blocks.html
@@ -1267,31 +1267,31 @@
                     </div>
                   </div>
                 </div>
-                <div class="card card-slider cardFifth-slider">
-                  <div class="card-wrap card-slider-wrap cardFifth-slider-wrap">
-                    <div class="card-slider__item cardFifth-slider__item">
-                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-01.jpg);"></div>
+                <div class="card card-slider card-fifth-slider">
+                  <div class="card-wrap card-slider-wrap card-fifth-slider-wrap">
+                    <div class="card-slider__item card-fifth-slider__item">
+                      <div class="card-fifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-01.jpg);"></div>
                     </div>
-                    <div class="card-slider__item cardFifth-slider__item">
-                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-02.jpg);"></div>
+                    <div class="card-slider__item card-fifth-slider__item">
+                      <div class="card-fifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-02.jpg);"></div>
                     </div>
-                    <div class="card-slider__item cardFifth-slider__item">
-                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-03.jpg);"></div>
+                    <div class="card-slider__item card-fifth-slider__item">
+                      <div class="card-fifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-03.jpg);"></div>
                     </div>
-                    <div class="card-slider__item cardFifth-slider__item">
-                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-02.jpg);"></div>
+                    <div class="card-slider__item card-fifth-slider__item">
+                      <div class="card-fifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-02.jpg);"></div>
                     </div>
-                    <div class="card-slider__item cardFifth-slider__item">
-                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-01.jpg);"></div>
+                    <div class="card-slider__item card-fifth-slider__item">
+                      <div class="card-fifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-01.jpg);"></div>
                     </div>
-                    <div class="card-slider__item cardFifth-slider__item">
-                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-03.jpg);"></div>
+                    <div class="card-slider__item card-fifth-slider__item">
+                      <div class="card-fifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-03.jpg);"></div>
                     </div>
-                    <div class="card-slider__item cardFifth-slider__item">
-                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-02.jpg);"></div>
+                    <div class="card-slider__item card-fifth-slider__item">
+                      <div class="card-fifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-02.jpg);"></div>
                     </div>
-                    <div class="card-slider__item cardFifth-slider__item">
-                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-01.jpg);"></div>
+                    <div class="card-slider__item card-fifth-slider__item">
+                      <div class="card-fifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-01.jpg);"></div>
                     </div>
                   </div>
                 </div>
