--- a/blocks.html
+++ b/blocks.html
@@ -1373,12 +1373,12 @@
                         <div class="card-links__imgbox"><img src="img/icon/pdf.svg"></div>
                       </div>
                       <div class="card-links__items">
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Типа производства по ГОСТ 14.004-83</a></div>
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Стадии разработки документов по ГОСТ 3.1102-81</a></div>
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Степени детализации описания технологических процессов, установленных по ГОСТ 3.1109-82;</a></div>
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Применяемых технологических методов изготовления и ремонта изделий.</a></div>
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Типа производства по ГОСТ 14.004-83</a></div>
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Стадии разработки документов по ГОСТ 3.1102-81</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Типа производства по ГОСТ 14.004-83</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Стадии разработки документов по ГОСТ 3.1102-81</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Степени детализации описания технологических процессов, установленных по ГОСТ 3.1109-82;</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Применяемых технологических методов изготовления и ремонта изделий.</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Типа производства по ГОСТ 14.004-83</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Стадии разработки документов по ГОСТ 3.1102-81</a></div>
                       </div>
                     </div>
                   </div>
@@ -1390,12 +1390,12 @@
                         <div class="card-links__imgbox"><img src="img/icon/exel.svg"></div>
                       </div>
                       <div class="card-links__items">
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Типа производства по ГОСТ 14.004-83</a></div>
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Стадии разработки документов по ГОСТ 3.1102-81</a></div>
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Степени детализации описания технологических процессов, установленных по ГОСТ 3.1109-82;</a></div>
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Применяемых технологических методов изготовления и ремонта изделий.</a></div>
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Типа производства по ГОСТ 14.004-83</a></div>
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Стадии разработки документов по ГОСТ 3.1102-81</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Типа производства по ГОСТ 14.004-83</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Стадии разработки документов по ГОСТ 3.1102-81</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Степени детализации описания технологических процессов, установленных по ГОСТ 3.1109-82;</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Применяемых технологических методов изготовления и ремонта изделий.</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Типа производства по ГОСТ 14.004-83</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Стадии разработки документов по ГОСТ 3.1102-81</a></div>
                       </div>
                     </div>
                   </div>
@@ -1414,12 +1414,12 @@
                         <div class="card-links__imgbox"><img src="img/icon/word.svg"></div>
                       </div>
                       <div class="card-links__items">
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Типа производства по ГОСТ 14.004-83</a></div>
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Стадии разработки документов по ГОСТ 3.1102-81</a></div>
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Степени детализации описания технологических процессов, установленных по ГОСТ 3.1109-82;</a></div>
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Применяемых технологических методов изготовления и ремонта изделий.</a></div>
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Типа производства по ГОСТ 14.004-83</a></div>
-                        <div class="card-links__lnkbox"><a class="card-links__lnk" href="">Стадии разработки документов по ГОСТ 3.1102-81</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Типа производства по ГОСТ 14.004-83</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Стадии разработки документов по ГОСТ 3.1102-81</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Степени детализации описания технологических процессов, установленных по ГОСТ 3.1109-82;</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Применяемых технологических методов изготовления и ремонта изделий.</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Типа производства по ГОСТ 14.004-83</a></div>
+                        <div class="card-links__lnkbox"><a class="card-links__lnk link-icon-save" href="">Стадии разработки документов по ГОСТ 3.1102-81</a></div>
                       </div>
                     </div>
                   </div>
