--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
               </div>
               <div class="row">
                 <div class="col-xl-12">
-                  <div class="card bg-color-light">
+                  <div class="card bg-color-light--- margin-bottom-15">
                     <div class="content-title">
                       <div class="content-titlebox">
                         <h1>Главная страница</h1>
